	data frames} now throws a warning and may become defunct in the
      future. If partial matching is intended, replace \code{foo$bar}
      by \code{foo[["bar", exact = FALSE]]}.

      \item The long-deprecated use of \code{\\synopsis} in the
      \samp{Usage} section of \file{.Rd} files has been removed: such
      sections are now ignored (with a warning).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Calling \code{lm.wfit()} with no non-zero weights gave an
      array-overrun in the Fortran code and a not very sensible answer.
      It is now special-cased with a simpler answer (no \code{qr}
      component).

      \item On system where \code{mktime()} does not set \code{ERRNO}, the
      last second before the epoch could not be converted from \code{POSIXlt}
      to \code{POSIXct}. (Reported by Bill Dunlap.)

      \item If \code{x} is a symbol, \code{is.vector(x, "name")} now returns
      \code{TRUE}, since \code{"name"} and \code{"symbol"} should be synonyms.
      (Reported by Hervé Pagès.)

      \item The parser now enforces C99 syntax for floating point
      hexadecimal constants (e.g. \code{0x1.1p0}), rather than returning
      unintended values for malformed constants. (\PR{15234})

      \item \code{is.unsorted(NA)} returns false as documented (rather than
      \code{NA}).

      \item Error messages involving non-syntactic names (e.g. as produced
      by \code{`\\r`} when that object does not exist) now encode
      the control characters.  (Reported by Hadley Wickham.)
    }
  }
}

\section{\Rlogo CHANGES IN R 3.0.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The macros used for the texinfo manuals have been changed to
      work better with the incompatible changes made in texinfo 5.x.

      \item The \code{example()} and \code{tools::Rd2ex()} functions now
      have parameters to allow them to ignore \verb{\dontrun} markup in
      examples.  (Suggested by Peter Solymos.)
