@@ -26,10 +26,6 @@ sd(x, na.rm = FALSE)
   The standard deviation of a zero-length vector (after removal of
   \code{NA}s if \code{na.rm = TRUE}) is not defined and gives an error.
   The standard deviation of a length-one vector is \code{NA}.
-
-  Prior to \R 2.14.0, \code{sd(dfrm)} worked directly for a
-  \link{data.frame} \code{dfrm}.  This is now deprecated and you are
-  expected to use \code{\link{sapply}(dfrm, sd)}.
 }
 \seealso{
   \code{\link{var}} for its square, and \code{\link{mad}}, the most
