@@ -18,7 +18,7 @@
 
 package.skeleton <-
     function(name = "anRpackage", list = character(), environment = .GlobalEnv,
-	     path = ".", force = FALSE, namespace = TRUE,
+	     path = ".", force = FALSE,
              code_files = character())
 {
     safe.dir.create <- function(path)
@@ -104,9 +104,6 @@ package.skeleton <-
 	file = description, sep = "")
     close(description)
 
-    if(!namespace)
-	warning("From R 2.14.0 on, every package gets a NAMESPACE.",
-		" Argument 'namespace' is deprecated.", domain = NA)
     ## NAMESPACE
     ## <NOTE>
     ## For the time being, we export all non-internal objects using the pattern
